--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="header">
+  <header class="navbar">
     <div class="container">
-      <div class="header-top">
+      <div class="navbar-top">
         <a href="#" class="logo">
           <img src="img/horizontal-logo.svg" alt="logo: Best tour plan" class="logo__image">
         </a>
@@ -29,14 +29,14 @@
         </a>
       </div>
 
-      <ul class="header-menu">
-        <li class="header-menu__item"><a href="#" class="header-menu__link">All Deals</a></li>
-        <li class="header-menu__item"><a href="#" class="header-menu__link">Hotels</a></li>
-        <li class="header-menu__item"><a href="#" class="header-menu__link">Activities</a></li>
-        <li class="header-menu__item"><a href="#" class="header-menu__link">Hotel Day Packages</a></li>
-        <li class="header-menu__item"><a href="#" class="header-menu__link">Restaurants</a></li>
-        <li class="header-menu__item"><a href="#" class="header-menu__link">Events</a></li>
-        <li class="header-menu__item"><a href="#" class="header-menu__link">Rodrigues</a></li>
+      <ul class="navbar-menu">
+        <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
+        <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
+        <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
+        <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotel Day Packages</a></li>
+        <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Restaurants</a></li>
+        <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Events</a></li>
+        <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
       </ul>
     </div>
   </header>
