fix: fixed width search input, fixed visibility menu-button

--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
           <img src="img/horizontal-logo.svg" alt="logo: Best tour plan" class="logo__image">
         </a>
 
-        <form action="#" class="search">
+        <form action="#" class="search navbar__search">
           <input type="text" class="search__input" placeholder="Search Location">
           <button class="search__button">
             <img src="img/search.svg" alt="Icon: search">
           </button>
         </form>
 
-        <a href="#" class="user">
+        <a href="#" class="user navbar__user">
           <img src="img/avatar.jfif" alt="Avatar: Nathan" class="user__avatar">
           <span class="user__name">Nathan</span>
         </a>
+        <button class="menu-button navbar-top__menu-button">
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+        </button>
       </div>
 
      
