--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
           <span class="menu-button__line"></span>
         </button>
       </div>
-
      
     </div>
     <div class="navbar-bottom">
@@ -51,5 +50,48 @@
     </div>
   </header>
   <!-- /.header -->
+  <nav class="breadcrumb">
+  <div class="container">
+      <ul class="breadcrumb-list">
+        <li class="breadcrumb-list__item">
+          <a href="#" class="breadcrumb-list__link">Home</a>
+        </li>
+        <li class="breadcrumb-list__item">
+          <a href="#" class="breadcrumb-list__link">Flash Offers</a>
+        </li>
+        <li class="breadcrumb-list__item">
+          Grand Hilton Hotel
+        </li>
+      </ul>
+  </div>
+  </nav>
+  <!-- /.breadcrumb -->
+  <section class="hotel">
+    <div class="container">
+      <div class="hotel-info">
+        <div class="hotel-info__text">
+           <div class="hotel-wrapper">
+                      <div class="stars">
+                        <img src="img/Star.svg" alt="star">
+                        <img src="img/Star.svg" alt="star">
+                        <img src="img/Star.svg" alt="star">
+                        <img src="img/Star.svg" alt="star">
+                        <img src="img/Star.svg" alt="star">
+                      </div>
+                      <h1 class="hotel-name hotel-info__name">GRAND HILTON HOTEL</h1>
+                      <span class="offer hotel-info__offer">Flash Offer</span>
+           </div>         
+          <p class="hotel-description hotel-info__description">Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free
+
+          </p>
+        </div>
+        <div class="rating hotel-info__rating">
+          <span class="rating__text">User Rattings</span>
+          <span class="rating__counter">4.5/5</span>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /.hotel -->
 </body>
 </html>
