--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Best tour plan-Hotel-Booking</title>
   
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -90,8 +91,36 @@
           <span class="rating__counter">4.5/5</span>
         </div>
       </div>
+      <div class="hotel-grid">
+        <div class="slider">
+          <!-- Slider main container -->
+          <div class="swiper-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img src="img/slide.jpg" alt="slide">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/slide.jpg" alt="slide">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/slide.jpg" alt="slide">
+              </div>
+              ...
+            </div>
+            <!-- If we need navigation buttons -->
+            <button class="slider-button slider-button--prev"></button>
+            <button class="slider-button slider-button--next"></button>
+        
+          </div>
+          <!--/.swiper-container-->
+        </div>
+      </div>
     </div>
   </section>
   <!-- /.hotel -->
+  <script src="js/swiper-bundle.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
