create: added two slide photo

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                 <img src="img/slide.jpg" alt="slide">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide.jpg" alt="slide">
+                <img src="img/slide_2.jpg" alt="slide">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide.jpg" alt="slide">
+                <img src="img/slide_3.jpg" alt="slide">
               </div>
               ...
             </div>
