create: media rules for hotel section

--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@
         </div>
       </div>
       <div class="hotel-grid">
-        <div class="slider">
+        <div class="slider hotel__slider">
           <!-- Slider main container -->
           <div class="swiper-container">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide">
-                <img src="img/slide.jpg" alt="slide">
+                <img class="swiper-slide__img" src="img/slide.jpg" alt="slide">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide_2.jpg" alt="slide">
+                <img class="swiper-slide__img" src="img/slide_2.jpg" alt="slide">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide_3.jpg" alt="slide">
+                <img class="swiper-slide__img" src="img/slide_3.jpg" alt="slide">
               </div>
               ...
             </div>
@@ -149,7 +149,7 @@
           </div>
           <div class="map">
           <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab93079ec4aba7b149450935c016c26e9d008128086a7f0ced1b75e79abd489bf&amp;source=constructor" 
-          width="347" height="213" frameborder="0"></iframe>
+          width="100%" height="213" frameborder="0"></iframe>
           </div>
           <!-- /.map -->
      </div>
