--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide hotel-slider__item">
-                <img class="swiper-slide__img" src="img/slide.jpg" alt="slide">
+                <img class="swiper-slide__img hotel-slider__img" src="img/slide.jpg" alt="slide">
               </div>
               <div class="swiper-slide hotel-slider__item">
-                <img class="swiper-slide__img" src="img/slide_2.jpg" alt="slide">
+                <img class="swiper-slide__img hotel-slider__img" src="img/slide_2.jpg" alt="slide">
               </div>
               <div class="swiper-slide hotel-slider__item">
-                <img class="swiper-slide__img" src="img/slide_3.jpg" alt="slide">
+                <img class="swiper-slide__img hotel-slider__img" src="img/slide_3.jpg" alt="slide">
               </div>
               ...
             </div>
