--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="swiper-slide hotel-slider__item">
                 <img class="swiper-slide__img hotel-slider__img" src="img/slide_3.jpg" alt="slide">
               </div>
-              ...
+             
             </div>
             <!-- If we need navigation buttons -->
             <button class="hotel-slider__button hotel-slider__button--prev"></button>
@@ -265,6 +265,34 @@
   </div>
 </section>
 <!-- /.reviews -->
+<section class="activities">
+  <div class="container">
+    <h2 class="activities__title">Other Activities</h2>
+    <div class="activities-wrapper">
+      <div class="card activities__card">
+        <img src="img/activity-1.jpg" alt="The curious corner of chamarel"  class="card__image">
+        <h3 class="card__title">The curious corner of chamarel</h3>
+        <button class="card__button">Book Now</button>
+      </div>
+      <div class="card activities__card">
+        <img src="img/activity-2.jpg" alt="Gymkhana club golf course" class="card__image">
+        <h3 class="card__title">Gymkhana club golf course</h3>
+        <button class="card__button">Book Now</button>
+      </div>
+      <div class="card activities__card">
+        <img src="img/activity-3.jpg" alt="Tamarind falls hiking trip - full day" class="card__image">
+        <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
+        <button class="card__button">Book Now</button>
+      </div>
+      <div class="card activities__card">
+        <img src="img/activity-4.jpg" alt="The blue marine discovery quest" class="card__image">
+        <h3 class="card__title">The blue marine discovery quest</h3>
+        <button class="card__button">Book Now</button>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- /.activities -->
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
