create: added policy in section footer

--- a/index.html
+++ b/index.html
@@ -383,6 +383,14 @@
               </div>
             
     </div>
+    <div class="footer-policy">
+      <div class="footer-policy__block">
+        <li class="footer-policy__item"><a href="#" class="footer-policy__link">Disclaimer</a></li>
+        <li class="footer-policy__item"><a href="#" class="footer-policy__link">Conditions of use</a></li>
+        <li class="footer-policy__item"><a href="#" class="footer-policy__link">Cancellation policy</a></li>
+      </div>
+      <img src="img/policy.png" alt="" class="footer-policy__icon">
+    </div>
 
   </div>
 </section>
