create:added  file send.pnp

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         subscribe to our
         <span class="newsletter-title__strong">Newsletter</span>
       </h2>
-      <form action="#" class="subscribe newsletter__subscribe">
-        <input type="text" class="subscribe__input" placeholder="Your email address">
+      <form action="send.php" method="POST" class="subscribe newsletter__subscribe">
+        <input type="text" class="subscribe__input" placeholder="Your email address" name="email">
         <button class="subscribe__button">
           Send
         </button>
@@ -388,10 +388,10 @@
               </div>
               <div class="footer__contact-form footer__form">
                 <h3 class="footer__title footer__title--mb3">Send us a message</h3>
-                <form action="#" class="footer__form">
-                  <input type="text" class="input footer__input " placeholder="Your Full Name*">
-                  <input type="text" class="input footer__input " placeholder="Phone Number*">
-                  <textarea class="footer__message" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <form action="send.php" method="POST" class="footer__form">
+                  <input type="text" class="input footer__input " placeholder="Your Full Name*" name= "name">
+                  <input type="text" class="input footer__input " placeholder="Phone Number*" name="phone">
+                  <textarea class="footer__message" name="" id=""  placeholder="Message" name="message"></textarea>
                   <button class="button footer__button">Send</button>
                   <span class="footer__info">* Required Fields</span>
                 </form>
