create: adde modal dialog

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
           </p>
         </div>
-        <div class="rating hotel-info__rating">
+        <div data-toggle="modal" data-href="#rating-modal" class="rating hotel-info__rating">
           <span class="rating__text">User Rattings</span>
           <span class="rating__counter">4.5/5</span>
         </div>
@@ -159,7 +159,7 @@
               </a>
           
             </div>
-            <button class="button booking__button">View Other Options</button>
+            <button data-toggle="modal" data-href="#booking-modal" class="button booking__button">View Other Options</button>
           </div>
           <div class="map">
           <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab93079ec4aba7b149450935c016c26e9d008128086a7f0ced1b75e79abd489bf&amp;source=constructor" 
@@ -391,7 +391,7 @@
                 <form action="send.php" method="POST" class="footer__form">
                   <input type="text" class="input footer__input " placeholder="Your Full Name*" name= "name">
                   <input type="text" class="input footer__input " placeholder="Phone Number*" name="phone">
-                  <textarea class="footer__message" name="" id=""  placeholder="Message" name="message"></textarea>
+                  <textarea class="message footer__message" name="" id=""  placeholder="Message" name="message"></textarea>
                   <button class="button footer__button">Send</button>
                   <span class="footer__info">* Required Fields</span>
                 </form>
@@ -402,6 +402,47 @@
   </div>
 </section>
 <!-- /.footer -->
+<div class="modal" id="booking-modal">
+  <div class="modal__overlay"></div>
+  <!-- /.modal__overlay -->
+  <div class="modal__dialog">
+    <a href="#" class="modal__close">
+      <img src="img/close.svg" alt="Icon: Close">
+    </a>
+    <h3 class="modal__title footer__title--mb3">Booking</h3>
+    <form action="send.php" method="POST" class="modal__form">
+      <input type="text" class="input modal__input " placeholder="Your Full Name*" name="name">
+      <input type="text" class="input modal__input " placeholder="Phone Number*" name="phone">
+      <textarea class="message modal__message" name="" id="" placeholder="Message" name="message"></textarea>
+      <button class="button modal__button">Send</button>
+      <span class="modal__info">* Required Fields</span>
+    </form>
+
+  </div>
+  <!-- /.modal__dialog -->
+</div>
+<!-- /.modal -->
+<div class="modal" id="rating-modal">
+  <div class="modal__overlay"></div>
+  <!-- /.modal__overlay -->
+  <div class="modal__dialog">
+    <a href="#" class="modal__close">
+      <img src="img/close.svg" alt="Icon: Close">
+    </a>
+    <h3 class="modal__title footer__title--mb3">Send us a feedback</h3>
+    <form action="send.php" method="POST" class="modal__form">
+      <input type="text" class="input modal__input " placeholder="Your Full Name*" name="name">
+      <input type="text" class="input modal__input " placeholder="Phone Number*" name="phone">
+      <textarea class="message modal__message" name="" id="" placeholder="Message" name="message"></textarea>
+      <button class="button modal__button">Send</button>
+      <span class="modal__info">* Required Fields</span>
+    </form>
+
+  </div>
+  <!-- /.modal__dialog -->
+</div>
+<!-- /.modal -->
+  <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
