--- a/index.html
+++ b/index.html
@@ -162,11 +162,12 @@
             <button data-toggle="modal" data-href="#booking-modal" class="button booking__button">View Other Options</button>
           </div>
           <div class="map">
-          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab93079ec4aba7b149450935c016c26e9d008128086a7f0ced1b75e79abd489bf&amp;source=constructor" 
-          width="100%" height="213" frameborder="0"></iframe>
+          <iframe class="map__link" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab93079ec4aba7b149450935c016c26e9d008128086a7f0ced1b75e79abd489bf&amp;source=constructor" 
+           ></iframe>
           </div>
           <!-- /.map -->
      </div>
+    </div>
     </div>
   </section>
   <!-- /.hotel -->
@@ -386,12 +387,16 @@
                   </li>
                 </ul>
               </div>
-              <div class="footer__contact-form footer__form">
+              <div class="footer__contact-form footer__form ">
                 <h3 class="footer__title footer__title--mb3">Send us a message</h3>
-                <form action="send.php" method="POST" class="footer__form">
-                  <input type="text" class="input footer__input " placeholder="Your Full Name*" name= "name">
-                  <input type="text" class="input footer__input " placeholder="Phone Number*" name="phone">
-                  <textarea class="message footer__message" name="" id=""  placeholder="Message" name="message"></textarea>
+                <form action="send.php" method="POST" class="footer__form form">
+                  <div class="footer__input-group">
+                    <input type="text" class="input footer__input " placeholder="Your Full Name*" name="name" required>
+                  </div>
+                  <div class="footer__input-group">
+                    <input type="tel" class="input footer__input " placeholder="Phone Number*" name="phone" required>
+                  </div>
+                  <textarea class="message footer__message"   placeholder="Message" name="message"></textarea>
                   <button class="button footer__button">Send</button>
                   <span class="footer__info">* Required Fields</span>
                 </form>
@@ -409,11 +414,12 @@
     <a href="#" class="modal__close">
       <img src="img/close.svg" alt="Icon: Close">
     </a>
-    <h3 class="modal__title footer__title--mb3">Booking</h3>
-    <form action="send.php" method="POST" class="modal__form">
-      <input type="text" class="input modal__input " placeholder="Your Full Name*" name="name">
-      <input type="text" class="input modal__input " placeholder="Phone Number*" name="phone">
-      <textarea class="message modal__message" name="" id="" placeholder="Message" name="message"></textarea>
+    <h3 class="modal__title modal__title--mb3">Booking</h3>
+    <form action="send.php" method="POST" class="modal__form form">
+      <input type="text" class="input modal__input " placeholder="Your Full Name*" name="name" required minlength="2">
+      <input type="tel" class="input modal__input " placeholder="Phone Number*" name="phone" required>
+      <input type="email" class="input modal__input " placeholder="Your email*" name="email" required>
+      <textarea class="message modal__message"  placeholder="Message" name="message"></textarea>
       <button class="button modal__button">Send</button>
       <span class="modal__info">* Required Fields</span>
     </form>
@@ -429,11 +435,12 @@
     <a href="#" class="modal__close">
       <img src="img/close.svg" alt="Icon: Close">
     </a>
-    <h3 class="modal__title footer__title--mb3">Send us a feedback</h3>
-    <form action="send.php" method="POST" class="modal__form">
-      <input type="text" class="input modal__input " placeholder="Your Full Name*" name="name">
-      <input type="text" class="input modal__input " placeholder="Phone Number*" name="phone">
-      <textarea class="message modal__message" name="" id="" placeholder="Message" name="message"></textarea>
+    <h3 class="modal__title modal__title--mb3">Send us a feedback</h3>
+    <form action="send.php" method="POST" class="modal__form form">
+      <input type="text" class="input modal__input " placeholder="Your Full Name*" name="name" required>
+      <input type="tel" class="input modal__input " placeholder="Phone Number*" name="phone" required>
+      
+      <textarea class="message modal__message" placeholder="Message" name="message"></textarea>
       <button class="button modal__button">Send</button>
       <span class="modal__info">* Required Fields</span>
     </form>
@@ -444,6 +451,8 @@
 <!-- /.modal -->
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  
   <script src="js/main.js"></script>
 </body>
 </html>
