create: added animation on scroll

--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
   
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="navbar navbar--mobile_fixed">
     <div class="container">
-      <div class="navbar-top">
-        <a href="#" class="logo">
+      <div class="navbar-top" >
+        <a href="#" class="logo" > 
           <img src="img/horizontal-logo.svg" alt="logo: Best tour plan" class="logo__image">
         </a>
 
-        <form action="#" class="search navbar__search navbar__search--mobile_hidden">
+        <form action="#" class="search navbar__search navbar__search--mobile_hidden" >
           <input type="text" class="search__input" placeholder="Search Location">
           <button class="search__button">
             <img src="img/search.svg" alt="Icon: search">
           </button>
         </form>
 
-        <a href="#" class="user navbar__user navbar__user--mobile_hidden">
+        <a href="#" class="user navbar__user navbar__user--mobile_hidden" >
           <img src="img/avatar.jfif" alt="Avatar: Nathan" class="user__avatar">
           <span class="user__name">Nathan</span>
         </a>
@@ -108,7 +109,7 @@
       <div class="hotel-grid">
   
           <!-- Slider main container -->
-          <div class="swiper-container hotel-slider hotel__slider">
+          <div class="swiper-container hotel-slider hotel__slider" data-aos="fade-right" data-aos-delay="200">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
@@ -130,8 +131,8 @@
           </div>
           <!--/.swiper-container-->
     
-     <div class="hotel-right">
-          <div class="booking">
+     <div class="hotel-right" >
+          <div class="booking" data-aos="fade-left" data-aos-delay="300">
             <div class="booking__info">
               <div class="booking__price">
                 <span class="booking__start">price starts as</span>
@@ -161,7 +162,7 @@
             </div>
             <button data-toggle="modal" data-href="#booking-modal" class="button booking__button">View Other Options</button>
           </div>
-          <div class="map">
+          <div class="map" data-aos="fade-left" data-aos-delay="300">
           <iframe class="map__link" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab93079ec4aba7b149450935c016c26e9d008128086a7f0ced1b75e79abd489bf&amp;source=constructor" 
            ></iframe>
           </div>
@@ -174,11 +175,11 @@
 
   <section class="newsletter" data-parallax="scroll">
     <div class="newsletter-wrapper">
-      <h2 class="newsletter-title">
+      <h2 class="newsletter-title" data-aos="fade-right" data-aos-delay="200">
         subscribe to our
         <span class="newsletter-title__strong">Newsletter</span>
       </h2>
-      <form action="send.php" method="POST" class="subscribe newsletter__subscribe">
+      <form action="send.php" method="POST" class="subscribe newsletter__subscribe" data-aos="fade-left" data-aos-delay="300">
         <input type="text" class="subscribe__input" placeholder="Your email address" name="email">
         <button class="subscribe__button">
           Send
@@ -192,7 +193,7 @@
     <h2 class="reviews__title">
       What people thinks about us
     </h2>
-    <div class="swiper-container reviews-slider">
+    <div class="swiper-container reviews-slider" data-aos="fade-right" data-aos-delay="200">
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
@@ -285,22 +286,22 @@
   <div class="container">
     <h2 class="activities__title">Other Activities</h2>
     <div class="activities-wrapper">
-      <div class="card activities__card">
+      <div class="card activities__card" data-aos="fade-right" data-aos-delay="200">
         <img src="img/activity-1.jpg" alt="The curious corner of chamarel"  class="card__image">
         <h3 class="card__title">The curious corner of chamarel</h3>
         <button class="card__button">Book Now</button>
       </div>
-      <div class="card activities__card">
+      <div class="card activities__card" data-aos="fade-right" data-aos-delay="400">
         <img src="img/activity-2.jpg" alt="Gymkhana club golf course" class="card__image">
         <h3 class="card__title">Gymkhana club golf course</h3>
         <button class="card__button">Book Now</button>
       </div>
-      <div class="card activities__card">
+      <div class="card activities__card" data-aos="fade-right" data-aos-delay="600">
         <img src="img/activity-3.jpg" alt="Tamarind falls hiking trip - full day" class="card__image">
         <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
         <button class="card__button">Book Now</button>
       </div>
-      <div class="card activities__card">
+      <div class="card activities__card" data-aos="fade-right" data-aos-delay="800">
         <img src="img/activity-4.jpg" alt="The blue marine discovery quest" class="card__image">
         <h3 class="card__title">The blue marine discovery quest</h3>
         <button class="card__button">Book Now</button>
@@ -452,7 +453,7 @@
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/jquery.validate.min.js"></script>
-  
+  <script src="js/aos.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
